@@ -2,8 +2,13 @@
   * v2.1 Alpha 1
   **************
 
+    * Bugfix CORE-986
+        Non-ASCII quoted identifiers are not converted to metadata (UNICODE_FSS) charset
+	Contributor(s):
+        Adriano dos Santos Fernandes <adrianosf at uol.com.br>
+
     * Bugfix CORE-966
-       Bug in socket binding for database event.
+        Bug in socket binding for database event.
 	Contributor(s):
         Paul Beach <pbeach at ibphoenix.com>
         Dmitry Yemanov <dimitr at firebirdsql.org>
